project2/tests/reject/0-smallerEqual-bad.cc
int main() {
    bool y = 4 <= true;
    bool x = false <= 4.0;
}